# PrismSNV

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
recipe/: README.md  meta.yaml
src/prismsnv/: __init__.py  cli.py
src/prismsnv/preprocess/: __init__.py  bam2vcf.sh  snv2barcode.py
src/prismsnv/templates/: __init__.py  train_config.yaml
src/prismsnv/train/: __init__.py  pre_train.py  snv_effect.py  utility.py
